# songshare-analysis

./: .gitignore  .pre-commit-config.yaml  =1.1.0  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  dummy.mp3.tags.bak.json  environment.analyze-cpu.yml  environment.essentia.yml  lint-staged.config.mjs  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt
.github/agents/: Python Agent.agent.md  agent-usage.md
.github/workflows/: ci.yml  essentia-tests.yml
.husky/: pre-commit
docs/: essentia-hello.md  essentia-integration.md  id3-tags-plan.md
docs/schemas/: essentia-analysis.schema.json
scripts/: __init__.py  agent-verify-project.sh  agent_checks.py  agent_checks_test.py  essentia_hello.py  install-mambaforge.sh  install-vscode-extensions.sh  run-analyze-tests.sh  run-essentia-tests.sh  run-with-analyze.sh  setup-analyze.sh  setup-essentia.sh  setup_env.sh
src/: conftest.py
src/songshare_analysis/: __init__.py  __main__.py  core.py  core_test.py  id3_cli_apply.py  id3_cli_print.py  id3_cli_process.py  id3_cover.py  (+5 more)
test_data/: a.mp3.tags.bak.json  c.mp3.tags.bak.json  dummy.mp3.tags.bak.json  essentia_fixture.mp3.analysis.json  f.tags.bak.json
tests/: __init__.py  conftest.py  test_analysis_to_tags.py  test_apply_metadata.py  test_apply_metadata_idempotent.py  test_apply_metadata_noop.py  test_cli.py  test_cli_cover_proposals.py  test_cli_id3.py  test_cli_id3_additional.py  test_cli_id3_mb_fetch_missing.py  test_cli_stats.py  test_cover_art_embed.py  test_id3.py  test_id3_cli_helpers.py  test_id3_mb.py  test_id3_summary_skipped.py  test_main_csv.py  test_main_default_print.py  test_main_summary.py  test_musicbrainz.py  test_musicbrainz_extract.py  test_panns_device_selection.py  test_panns_import.py  test_panns_inference.py
typings/: essentia.pyi  soundfile.pyi
(+52 files in other folders)
