[build-system]
requires = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "songshare-analysis"
version = "0.1.0"
description = "Analysis tools for Songshare data"
readme = "README.md"
license = "MIT"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "songshare_analysis", from = "src" }]
scripts = { "songshare-analyze" = "songshare_analysis.cli.__main__:main" }

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C", "B", "PLW"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "S101", "D100", "D103", "INP001", "PLC0415", "BLE001", "PGH003", "SLF001", 
  "ARG001", "ARG005", "TRY003", "EM101", "N806", "TC002", "PT018", "PLR2004", 
  "FBT001", "E501", "UP031", "ANN401", "TC001"
]
"src/**" = ["TC003"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["src"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = "^2.3"
numpy = "^2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^24.3"
ruff = "^0.14.9"
isort = "^5.12"
pre-commit = "^3.5"
mypy = "1.19.1"
# pandas-stubs removed due to Python 3.12 compatibility; add back when a compatible release exists
pytest-cov = "^4.1"
# Optional soundfile for Essentia / audio IO tests
soundfile = "^0.12.1"

# Ensure strict mode across tests as well
 # Tests are checked under strict mode via CLI/Makefile

[tool.poetry.extras]
# Optional extras for users who want Essentia-based analysis. Note: installing via pip may
# require native compilation if wheels are not available for your platform; prefer conda.
essentia = ["essentia"]
# Optional model-based classifiers
panns = ["panns-inference"]
